feat: Boids are now colored based on their cluster

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <head>
         <title>Boids</title>
         <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="jDBScan.js"></script>
 
         <style type="text/css">
             canvas { border: 5px solid black; }
