refactor: Cleaned up UI and removed duplicate config code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <body>
         <div id="sidemenu">
+            <h3>
+                Configuration
+            </h3>
             <div class="inputItem">
                 <label> Separation Strength </label>
                 <input type="range" min="0" max="0.05" value="0.01" step="0.0001" class="slider" id="sepSlider">
@@ -55,6 +58,13 @@
             <div class="inputItem">
                 <button type="reset" id="resetButton">Reset</button>
             </div>
+
+            <!--
+            <div class="inputItem">
+                <label> Dummy Slider </label>
+                <input type="range" min="0" max="100" value="50" step="1" class="slider" id="DUMMYSLIDER">
+            </div>
+            -->
         </div>
 
         <canvas id="cnvs" width="1280" height="720">Browser does not support canvas element</canvas>
