--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
 <html>
     <head>
         <title>Boids</title>
-        <script type="text/javascript" src="main.js"></script>
-        <script type="text/javascript" src="jDBScan.js"></script>
-        <link rel="stylesheet" href="styles.css">  
+        <script type="text/javascript" src="dist/index.js"></script>
+        <script type="text/javascript" src="dist/configs.js"></script>
+        <script type="text/javascript" src="dist/jDBScan.js"></script>
+        <script type="text/javascript" src="dist/boids.js"></script>
+        <link rel="stylesheet" href="css/styles.css">  
     </head>
 
     <body>
@@ -30,22 +32,28 @@
                 <input type="range" min="0" max="0.5" value="0.1" step="0.001" class="slider" id="aliSlider">
             </div>
 
+        <!--
             <div class="inputItem">
                 <label> Size </label>
                 <input type="range" min="5" max="100" value="18" step="1" class="slider" id="sizeSlider">
             </div>
+        -->
 
+        <!--
             <div class="inputItem">
                 <label> Speed </label>
                 <input type="range" min="0.5" max="10" value="4" step="0.25" class="slider" id="speedSlider">
             </div>
+        -->
 
+        <!--
             <div class="inputItem">
                 <label> Shadows </label>
                 <input class="check" type="checkbox" id="shadowCheck">
             </div>
+        -->
 
-
+        <!--
             <div class="inputItem">
                 <label> Shape </label>
                 <select class="selection" id="shapeSelect">
@@ -54,6 +62,7 @@
                     <option value="eye">Eye</option>
                 </select>
             </div>
+        -->
 
             <div class="inputItem">
                 <button type="reset" id="resetButton">Reset</button>
@@ -67,6 +76,6 @@
             -->
         </div>
 
-        <canvas id="cnvs" width="1280" height="720">Browser does not support canvas element</canvas>
+        <canvas id="cnvs">Browser does not support canvas element</canvas>
     </body>
 </html>
