--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <title>Boids</title>
         <script type="text/javascript" src="dist/index.js"></script>
         <script type="text/javascript" src="dist/configs.js"></script>
-        <script type="text/javascript" src="dist/jDBScan.js"></script>
+        <script type="text/javascript" src="dist/DBSCAN.js"></script>
         <script type="text/javascript" src="dist/boids.js"></script>
         <link rel="stylesheet" href="css/styles.css">  
     </head>
