feat: Optimized clustering
refactor: Adjusted slider initialization

--- a/public/index.html
+++ b/public/index.html
@@ -19,17 +19,17 @@
             </h3>
             <div class="inputItem">
                 <label> Separation Strength </label>
-                <input type="range" min="0" max="0.05" value="0.01" step="0.0001" class="slider" id="sepSlider">
+                <input type="range" class="slider" id="sepSlider" name="Separation">
             </div>
 
             <div class="inputItem">
                 <label> Cohesion Strength </label>
-                <input type="range" min="0" max="0.01" value="0.001" step="0.0001" class="slider" id="cohSlider">
+                <input type="range" class="slider" id="cohSlider" name="Cohesion">
             </div>
 
             <div class="inputItem">
                 <label> Alignment Strength </label>
-                <input type="range" min="0" max="0.5" value="0.1" step="0.001" class="slider" id="aliSlider">
+                <input type="range" class="slider" id="aliSlider" name="Alignment">
             </div>
 
         <!--
