refactor: Sliders now display values

--- a/public/index.html
+++ b/public/index.html
@@ -20,16 +20,19 @@
             <div class="inputItem">
                 <label> Separation Strength </label>
                 <input type="range" class="slider" id="sepSlider" name="Separation">
+                <span id="sepValue"></span>
             </div>
 
             <div class="inputItem">
                 <label> Cohesion Strength </label>
                 <input type="range" class="slider" id="cohSlider" name="Cohesion">
+                <span id="cohValue"></span>
             </div>
 
             <div class="inputItem">
                 <label> Alignment Strength </label>
                 <input type="range" class="slider" id="aliSlider" name="Alignment">
+                <span id="aliValue"></span>
             </div>
 
         <!--
